--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.22.6",
+    "@headlessui/react": "^1.7.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
@@ -26,6 +28,7 @@
     "@babel/preset-react": "^7.22.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "autoprefixer": "^10.4.14",
     "babel-jest": "^29.6.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
@@ -39,9 +42,11 @@
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.27",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.1.0",
     "react-test-renderer": "^18.2.0",
-    "sass": "^1.64.1",
-    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
