feat: RSVP Flow

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,10 @@
     "env": {
         "browser": true,
         "es6": true
-    }, 
+    },
+    "globals": {
+        "process": "readonly"
+    },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
