--- a/package.json
+++ b/package.json
@@ -15,10 +15,20 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.22.6",
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tailwindcss/forms": "^0.5.4",
+    "axios": "^1.4.0",
+    "dotenv-webpack": "^8.0.1",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
+    "redux-devtools-extension": "^2.13.9",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
