--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "dotenv-webpack": "^8.0.1",
     "formik": "^2.4.3",
+    "html-react-parser": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
